--- a/src/Juniperr.Blazor.Toolbar/ToolbarButton.razor
+++ b/src/Juniperr.Blazor.Toolbar/ToolbarButton.razor
@@ -1,9 +1,9 @@
 ﻿
 @inherits ToolbarComponentBase
 
-<ToolbarComponentEnvelop>
+<ToolbarComponentWrapper>
     <button class="@CssIcon" title="@Title" @onclick="() => OnClick()"></button>
-</ToolbarComponentEnvelop>
+</ToolbarComponentWrapper>
 
 @code {
     [Parameter]
