--- a/src/Juniperr.Blazor.Toolbar/ToolbarLink.razor
+++ b/src/Juniperr.Blazor.Toolbar/ToolbarLink.razor
@@ -1,11 +1,11 @@
 ﻿
 @inherits ToolbarComponentBase
 
-<ToolbarComponentEnvelop>
+<ToolbarComponentWrapper>
     <a class="@CssIcon"
        title="@Title"
        href="@Href"></a>
-</ToolbarComponentEnvelop>
+</ToolbarComponentWrapper>
 
 @code {
     [Parameter]
