--- a/samples/BlazorWebAssembly/_Imports.razor
+++ b/samples/BlazorWebAssembly/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorWebAssembly
+@using BlazorWebAssembly.Data
 @using BlazorWebAssembly.Shared
