--- a/samples/BlazorServerSide/_Imports.razor
+++ b/samples/BlazorServerSide/_Imports.razor
@@ -6,5 +6,11 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
+@using Juniperr.Blazor.Toolbar
+@using Juniperr.Blazor.Toolbar.Services
+
 @using BlazorServerSide
+@using BlazorServerSide.Data
 @using BlazorServerSide.Shared
+@using BlazorServerSide.ToolbarComponents
