--- a/samples/BlazorServerSide/Pages/Counter.razor
+++ b/samples/BlazorServerSide/Pages/Counter.razor
@@ -2,15 +2,22 @@
 
 <h1>Counter</h1>
 
-<p>Current count: @currentCount</p>
+<p>Current count: @ViewModel.CounterValue</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="ViewModel.IncrementCounter">Click me</button>
 
 @code {
-    private int currentCount = 0;
 
-    private void IncrementCount()
+    [CascadingParameter]
+    private ViewModel ViewModel { get; set; }
+
+    [CascadingParameter]
+    private IToolbarService ToolbarService { get; set; }
+
+    protected override void OnInitialized()
     {
-        currentCount++;
+        ToolbarService.Set<HomeLink>(0, 0);
+        ToolbarService.Set<CounterDecrementButton>(1, 0);
+        ToolbarService.Set<CounterIncrementButton>(1, 1);
     }
 }
