--- a/samples/BlazorWebAssembly/App.razor
+++ b/samples/BlazorWebAssembly/App.razor
@@ -1,10 +1,35 @@
-﻿<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
-    <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-    </Found>
-    <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
+﻿@using System.ComponentModel
+
+@implements IDisposable
+
+<CascadingToolbarService>
+    <CascadingValue Value=@ViewModel>
+        <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
+            <Found Context="routeData">
+                <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            </Found>
+            <NotFound>
+                <LayoutView Layout="@typeof(MainLayout)">
+                    <p>Sorry, there's nothing at this address.</p>
+                </LayoutView>
+            </NotFound>
+        </Router>
+    </CascadingValue>
+</CascadingToolbarService>
+
+@code {
+    private ViewModel ViewModel = new ViewModel();
+
+    protected override void OnInitialized()
+    {
+        ViewModel.PropertyChanged += ViewModelOnPropertyChanged;
+    }
+
+    public void Dispose()
+    {
+        ViewModel.PropertyChanged -= ViewModelOnPropertyChanged;
+    }
+
+    private void ViewModelOnPropertyChanged(object _, PropertyChangedEventArgs __)
+        => StateHasChanged();
+}
