--- a/samples/BlazorWebAssembly/_Imports.razor
+++ b/samples/BlazorWebAssembly/_Imports.razor
@@ -6,6 +6,11 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
+@using Juniperr.Blazor.Toolbar
+@using Juniperr.Blazor.Toolbar.Services
+
 @using BlazorWebAssembly
 @using BlazorWebAssembly.Data
 @using BlazorWebAssembly.Shared
+@using BlazorWebAssembly.ToolbarComponents
