--- a/samples/BlazorServerSide/Pages/Index.razor
+++ b/samples/BlazorServerSide/Pages/Index.razor
@@ -3,3 +3,14 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+@code {
+
+    [CascadingParameter]
+    private IToolbarService ToolbarService { get; set; }
+
+    protected override void OnAfterRender(bool _)
+    {
+        ToolbarService.Clear();
+    }
+}
