--- a/samples/BlazorWebAssembly/Pages/FetchData.razor
+++ b/samples/BlazorWebAssembly/Pages/FetchData.razor
@@ -60,7 +60,7 @@ else
         }
     }
 
-    protected async override Task OnAfterRenderAsync(bool firstRender)
+    protected async override Task OnAfterRenderAsync(bool _)
     {
         forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
 
