--- a/samples/BlazorServerSide/_Imports.razor
+++ b/samples/BlazorServerSide/_Imports.razor
@@ -13,4 +13,4 @@
 @using BlazorServerSide
 @using BlazorServerSide.Data
 @using BlazorServerSide.Shared
-@using BlazorServerSide.ToolbarComponents
+@using BlazorServerSide.Toolbars
