--- a/samples/BlazorWebAssembly/_Imports.razor
+++ b/samples/BlazorWebAssembly/_Imports.razor
@@ -13,4 +13,4 @@
 @using BlazorWebAssembly
 @using BlazorWebAssembly.Data
 @using BlazorWebAssembly.Shared
-@using BlazorWebAssembly.ToolbarComponents
+@using BlazorWebAssembly.Toolbars
