--- a/samples/BlazorServerSide/Pages/FetchData.razor
+++ b/samples/BlazorServerSide/Pages/FetchData.razor
@@ -64,13 +64,13 @@ else
     {
         forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
 
-        ToolbarService.Set<HomeLink>(0, 0);
-        ToolbarService.Set<FetchDataSelect>(1, 0,
+        ToolbarService.Set<NavigationToolbar, HomeLink>(0);
+        ToolbarService.Set<ActionToolbar, FetchDataSelect>(0,
             new ReadOnlyDictionary<string, object>(
-                new Dictionary<string, object>
-                {
-                    [nameof(FetchDataSelect.Date)] = Date,
-                    [nameof(FetchDataSelect.Forecasts)] = forecasts
-                }));
+            new Dictionary<string, object>
+            {
+                [nameof(FetchDataSelect.Date)] = Date,
+                [nameof(FetchDataSelect.Forecasts)] = forecasts
+            }));
     }
 }
