--- a/samples/BlazorWebAssembly/Shared/MainLayout.razor
+++ b/samples/BlazorWebAssembly/Shared/MainLayout.razor
@@ -7,8 +7,8 @@
 
     <div class="main">
         <div class="top-row px-4">
-            <Toolbar Group="0" CssClass="toolbar" />
-            <Toolbar Group="1" CssClass="toolbar" />
+            <NavigationToolbar CssClass="toolbar" />
+            <ActionToolbar CssClass="toolbar" />
         </div>
 
         <div class="content px-4">
