--- a/samples/BlazorWebAssembly/Pages/FetchData.razor
+++ b/samples/BlazorWebAssembly/Pages/FetchData.razor
@@ -64,13 +64,15 @@ else
     {
         forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
 
-        ToolbarService.Set<NavigationToolbar,HomeLink>(0);
-        ToolbarService.Set<ActionToolbar, FetchDataSelect>(0,
-            new ReadOnlyDictionary<string, object>(
+        ToolbarService
+            .Clear()
+            .Set<NavigationToolbar, HomeLink>()
+            .Set<ActionToolbar, FetchDataSelect>(
                 new Dictionary<string, object>
                 {
                     [nameof(FetchDataSelect.Date)] = Date,
                     [nameof(FetchDataSelect.Forecasts)] = forecasts
-                }));
+                });
+
     }
 }
