Removed double li element in toolbar

--- a/samples/BlazorServerSide/Toolbars/CounterIncrementButton.razor
+++ b/samples/BlazorServerSide/Toolbars/CounterIncrementButton.razor
@@ -1,4 +1,5 @@
-﻿<button class="oi oi-plus" title="Increment" @onclick="ViewModel.IncrementCounter"></button>
+﻿
+<button class="oi oi-plus" title="Increment" @onclick="ViewModel.IncrementCounter"></button>
 
 @code {
 
