--- a/src/Juniperr.Blazor.Toolbar/Toolbar.razor.css
+++ b/src/Juniperr.Blazor.Toolbar/Toolbar.razor.css
@@ -8,21 +8,27 @@
     list-style: none;
 }
 
-    ul li ::deep a { margin: .25rem !important; }
+    ul ::deep li a {
+        margin: .25rem !important;
+    }
 
-    ul li ::deep button { margin: .25rem !important; }
+    ul ::deep li button {
+        margin: .25rem !important;
+    }
 
-    ul li ::deep div { white-space: nowrap !important; }
+    ul ::deep li div {
+        white-space: nowrap !important;
+    }
 
-    ul li ::deep select {
+    ul ::deep li select {
         box-shadow: none !important;
         border: 0 !important;
         background-color: transparent !important;
     }
 
-    ul li ::deep a,
-    ul li ::deep button,
-    ul li ::deep div {
+    ul ::deep li a,
+    ul ::deep li button,
+    ul ::deep li div {
         display: inline-block;
         color: #212529;
         background-color: transparent;
@@ -39,28 +45,30 @@
         transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     }
 
-        ul li ::deep a:not(:disabled):not(.disabled),
-        ul li ::deep button:not(:disabled):not(.disabled),
-        ul li ::deep div:not(:disabled):not(.disabled) { cursor: pointer; }
+        ul ::deep li a:not(:disabled):not(.disabled),
+        ul ::deep li button:not(:disabled):not(.disabled),
+        ul ::deep li div:not(:disabled):not(.disabled) {
+            cursor: pointer;
+        }
 
-        ul li ::deep a:hover,
-        ul li ::deep button:hover,
-        ul li ::deep div:hover {
+        ul ::deep li a:hover,
+        ul ::deep li button:hover,
+        ul ::deep li div:hover {
             color: #212529;
             background-color: #e2e6ea;
             border-color: #dae0e5;
             text-decoration: none;
         }
 
-        ul li ::deep a:focus,
-        ul li ::deep button:focus,
-        ul li ::deep select:focus {
+        ul ::deep li a:focus,
+        ul ::deep li button:focus,
+        ul ::deep li select:focus {
             outline: 0;
         }
 
-        ul li ::deep a:active,
-        ul li ::deep button:active,
-        ul li ::deep select:active {
+        ul ::deep li a:active,
+        ul ::deep li button:active,
+        ul ::deep li select:active {
             color: #212529;
             background-color: #dae0e5;
             border-color: #d3d9df;
