--- a/samples/BlazorWebAssembly/Toolbars/CounterIncrementButton.razor
+++ b/samples/BlazorWebAssembly/Toolbars/CounterIncrementButton.razor
@@ -1,4 +1,6 @@
-﻿<button class="oi oi-plus" title="Increment" @onclick="ViewModel.IncrementCounter"></button>
+﻿<ToolbarComponent>
+    <button class="oi oi-plus" title="Increment" @onclick="ViewModel.IncrementCounter"></button>
+</ToolbarComponent>
 
 @code {
 
