--- a/samples/BlazorServerSide/Toolbars/CounterIncrementButton.razor
+++ b/samples/BlazorServerSide/Toolbars/CounterIncrementButton.razor
@@ -1,5 +1,6 @@
-﻿
-<button class="oi oi-plus" title="Increment" @onclick="ViewModel.IncrementCounter"></button>
+﻿<ToolbarComponent>
+    <button class="oi oi-plus" title="Increment" @onclick="ViewModel.IncrementCounter"></button>
+</ToolbarComponent>
 
 @code {
 
