--- a/samples/BlazorWebAssembly/Toolbars/CounterDecrementButton.razor
+++ b/samples/BlazorWebAssembly/Toolbars/CounterDecrementButton.razor
@@ -1,5 +1,6 @@
-﻿
-<button class="oi oi-minus" title="Decrement" @onclick="ViewModel.DecrementCounter"></button>
+﻿<ToolbarComponent>
+    <button class="oi oi-minus" title="Decrement" @onclick="ViewModel.DecrementCounter"></button>
+</ToolbarComponent>
 
 @code {
 
