--- a/samples/BlazorWebAssembly/Toolbars/HomeLink.razor
+++ b/samples/BlazorWebAssembly/Toolbars/HomeLink.razor
@@ -1,1 +1,3 @@
-﻿<a class="oi oi-home" title="Home" href=""></a>
+﻿<ToolbarComponent>
+    <a class="oi oi-home" title="Home" href=""></a>
+</ToolbarComponent>
