--- a/samples/BlazorWebAssembly/Pages/Counter.razor
+++ b/samples/BlazorWebAssembly/Pages/Counter.razor
@@ -6,8 +6,12 @@
 
 <div class="row">
     <button class="btn btn-primary mr-1" @onclick="ViewModel.IncrementCounter">Click me</button>
-    <CounterDecrementButton />
-    <CounterIncrementButton />
+    <div class="m-1">
+        <CounterDecrementButton />
+    </div>
+    <div class="m-1">
+        <CounterIncrementButton />
+    </div>
 </div>
 
 @code {
