Moved from Juniperr to Super

--- a/samples/BlazorServerSide/_Imports.razor
+++ b/samples/BlazorServerSide/_Imports.razor
@@ -7,8 +7,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 
-@using Juniperr.Blazor.Toolbar
-@using Juniperr.Blazor.Toolbar.Services
+@using Super.Blazor.Toolbar
+@using Super.Blazor.Toolbar.Services
 
 @using BlazorServerSide
 @using BlazorServerSide.Data
