--- a/samples/BlazorWebAssembly/_Imports.razor
+++ b/samples/BlazorWebAssembly/_Imports.razor
@@ -7,8 +7,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 
-@using Super.Blazor.Toolbar
-@using Super.Blazor.Toolbar.Services
+@using Supercode.Blazor.Toolbar
+@using Supercode.Blazor.Toolbar.Services
 
 @using BlazorWebAssembly
 @using BlazorWebAssembly.Data
